Added LOGIN,SignUp screen with Card and new design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">MY App</string>
     <string name="movie_app">Movie APP</string>
 </resources>
